[project]
name = "iocrc"
version = "0.1.0"
description = "IOC Reputation Checker"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [{name = "August Mondale", email = "blueishtsunami@proton.me"}]
dependencies = [
    "keyring>=25.6.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "shodan>=1.31.0",
    "typer>=0.15.3",
]

[project.scripts]
iocr = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]